.config/waybar/style.css
* {
    border: none;
    border-radius: 0;
    font-family: "Siji", "Tamzen", "Clear Sans", "Font Awesome 6 Free Solid", "Material Icons";
    font-size: 30px;
    min-height: 0;
    margin: 0px 10px;
}

window#waybar {
    background-color: rgba(43, 48, 59, 1);
    color: #ffffff;
    transition-property: background-color;
    transition-duration: .5s;
}

window#waybar.empty {
    color: rgba(0,0,0,0);
}

.topbar {
    border-bottom: 3px solid rgba(100, 114, 125, 1);
}

.bottombar {
    border-top: 3px solid rgba(100, 114, 125, 1);
}

#workspaces button {
    padding: 0 5px;
    background-color: transparent;
    color: #ffffff;
}

#workspaces button:hover {
    background: rgba(0, 0, 0, 0.2);
    box-shadow: inset 0 3px #ffffff;
}

#workspaces button.focused {
    background-color: #64727D;
    box-shadow: inset 0 3px #ffffff;
}

#workspaces button.urgent {
    background-color: #eb4d4b;
}

#mode {
    background-color: #64727D;
    border-top: 3px solid #ffffff;
}

#backlight,
#battery.bat1,
#battery.bat2,
#clock,
#cpu,
#custom-mail,
#custom-poweroff,
#custom-weather,
#disk,
#idle_inhibitor,
#memory,
#mode,
#network.vpn,
#network.wifi,
#network.ethernet,
#network.disconnected,
#pulseaudio,
#taskbar,
#temperature,
#tray {
    padding: 0 6px;
    margin: 0 0px;
    color: #ffffff;
}

@keyframes blink {
    to {
        background-color: #ffffff;
        color: #000000;
    }
}

#battery.bat2.critical:not(.charging) {
    background-color: #f53c3c;
    color: #ffffff;
    animation-name: blink;
    animation-duration: 0.5s;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
    animation-direction: alternate;
}

#temperature.critical {
    background-color: #eb4d4b;
}

#taskbar button:hover {
    background: rgba(0, 0, 0, 0.2);
    box-shadow: inset 0 3px #ffffff;
}

#taskbar button.active {
    background-color: #64727D;
    box-shadow: inset 0 3px #ffffff;
}

